--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="text_grey_light">#999999</color>
+    <color name="text_grey">#666666</color>
+    <color name="text_grey_hard">#333333</color>
+
+
 </resources>
