--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,24 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="appbar_padding_top">8dp</dimen>
+
+    <dimen name="margin_xxl">64dp</dimen>
+    <dimen name="margin_xl">32dp</dimen>
+    <dimen name="margin_l">16dp</dimen>
+    <dimen name="margin_m">8dp</dimen>
+    <dimen name="margin_s">4dp</dimen>
+    <dimen name="margin_xs">2dp</dimen>
+    <dimen name="margin_xxs">1dp</dimen>
+
+    <dimen name="text_xxl">20sp</dimen>
+    <dimen name="text_xl">18sp</dimen>
+    <dimen name="text_l">16sp</dimen>
+    <dimen name="text_m">14sp</dimen>
+    <dimen name="text_s">12sp</dimen>
+    <dimen name="text_xs">10sp</dimen>
+    <dimen name="text_xxs">8sp</dimen>
+
+    <dimen name="button_size">44dp</dimen>
 </resources>
