--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,13 @@
     <color name="text_grey_light">#999999</color>
     <color name="text_grey">#666666</color>
     <color name="text_grey_hard">#333333</color>
+    <color name="black">#000000</color>
+
+    <color name="white">#ffffff</color>
+    <color name="background_grey_light">#eeeeee</color>
+    <color name="background_grey">#dddddd</color>
+    <color name="background_grey_hard">#cccccc</color>
+
 
 
 </resources>
