--- a/app/src/main/res/drawable/selector_textcolor_black.xml
+++ b/app/src/main/res/drawable/selector_textcolor_black.xml
@@ -2,6 +2,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:color="@color/text_grey_hard" android:state_pressed="true" />
-    <item android:color="@color/text_grey" />
+    <item android:color="@color/text_grey_light" />
 
 </selector>
