--- a/app/src/main/res/layout/activity_local.xml
+++ b/app/src/main/res/layout/activity_local.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/background_grey_light"
     android:orientation="vertical"
-    tools:context="com.wind.music.activity.LocalActivity">
+    tools:context="com.wind.music.view.LocalActivity">
 
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/activity_local"
