--- a/app/src/main/res/drawable/selector_background_rect_alpha.xml
+++ b/app/src/main/res/drawable/selector_background_rect_alpha.xml
@@ -5,6 +5,11 @@
             <solid android:color="#22000000" />
         </shape>
     </item>
+    <item android:state_enabled="false">
+        <shape android:shape="rectangle">
+            <solid android:color="#4C000000" />
+        </shape>
+    </item>
     <item>
         <shape android:shape="rectangle">
             <solid android:color="#00000000" />
