--- a/app/src/main/res/layout/item_song_local.xml
+++ b/app/src/main/res/layout/item_song_local.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:id="@+id/item_song_local"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/selector_background_rect_alpha"
+    android:background="?android:attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
     android:gravity="center_vertical"
@@ -16,7 +17,8 @@
         android:id="@+id/iv_pic"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_centerVertical="true" />
+        android:layout_gravity="center_vertical"
+        android:src="@mipmap/icon_music" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,18 +31,38 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="1"
-            android:text="大约在冬季"
-            android:textColor="@color/text_grey_hard"
+            android:text=""
             android:textSize="@dimen/text_l" />
 
-        <TextView
-            android:id="@+id/tv_name"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_s"
-            android:maxLines="1"
-            android:text="齐秦"
-            android:textColor="@color/text_grey"
-            android:textSize="@dimen/text_m" />
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:text=""
+                android:textSize="@dimen/text_m" />
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/margin_s"
+                android:background="@color/text_grey" />
+
+            <TextView
+                android:id="@+id/tv_album"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/margin_s"
+                android:maxLines="1"
+                android:text=""
+                android:textSize="@dimen/text_s" />
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
