--- a/app/src/main/res/layout/layout_musicbar.xml
+++ b/app/src/main/res/layout/layout_musicbar.xml
@@ -7,7 +7,7 @@
     android:orientation="horizontal">
 
     <ImageView
-        android:id="@+id/musicbar_pic"
+        android:id="@+id/musicbar_picture"
         android:layout_width="@dimen/button_size"
         android:layout_height="@dimen/button_size"
         android:layout_marginLeft="@dimen/margin_m"
