--- a/music/src/main/res/layout/layout_musicbar.xml
+++ b/music/src/main/res/layout/layout_musicbar.xml
@@ -4,13 +4,14 @@
     android:layout_height="wrap_content"
     android:background="#99000000"
     android:gravity="center_vertical"
+    android:paddingLeft="@dimen/margin_m"
+    android:paddingRight="@dimen/margin_m"
     android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/musicbar_picture"
         android:layout_width="@dimen/button_size"
         android:layout_height="@dimen/button_size"
-        android:layout_marginLeft="@dimen/margin_m"
         android:src="@mipmap/ic_launcher" />
 
     <LinearLayout
