--- a/music/src/main/res/menu/menu_top.xml
+++ b/music/src/main/res/menu/menu_top.xml
@@ -2,8 +2,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.wind.music.view.BillBoardActivity">
+
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_into_local"
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
