--- a/music/src/main/res/layout/activity_local.xml
+++ b/music/src/main/res/layout/activity_local.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.wind.music.view.LocalActivity">
+    tools:context="com.wind.music.activity.LocalActivity">
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
