--- a/music/src/main/res/menu/menu_local.xml
+++ b/music/src/main/res/menu/menu_local.xml
@@ -2,11 +2,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.wind.music.view.BillBoardActivity">
-    <item
-        android:id="@+id/action_close"
-        android:orderInCategory="100"
-        android:title="@string/action_close"
-        app:showAsAction="never" />
+<!--    <item-->
+<!--        android:id="@+id/action_close"-->
+<!--        android:orderInCategory="100"-->
+<!--        android:title="@string/action_close"-->
+<!--        app:showAsAction="never" />-->
 
     <item
         android:id="@+id/action_into_billboard"
