--- a/music/src/main/res/values/colors.xml
+++ b/music/src/main/res/values/colors.xml
@@ -4,6 +4,8 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
+    <color name="color_image">#BB000000</color>
+
     <color name="text_grey_light">#999999</color>
     <color name="text_grey">#666666</color>
     <color name="text_grey_hard">#333333</color>
@@ -13,6 +15,8 @@
     <color name="background_grey_light">#eeeeee</color>
     <color name="background_grey">#dddddd</color>
     <color name="background_grey_hard">#cccccc</color>
+
+    <color name="divider_color">?attr/textColorError</color>
 
 
 
