--- a/music/src/main/res/menu/menu_main.xml
+++ b/music/src/main/res/menu/menu_main.xml
@@ -4,8 +4,9 @@
     tools:context="com.wind.music.view.BillBoardActivity">
 
     <item
-        android:id="@+id/action_into_billboard"
+        android:id="@+id/action_setting"
+        android:icon="@android:drawable/ic_menu_manage"
         android:orderInCategory="100"
-        android:title="@string/action_into_billboard"
+        android:title="@string/action_settings"
         app:showAsAction="ifRoom" />
 </menu>
