--- a/music/src/main/res/values/dimens.xml
+++ b/music/src/main/res/values/dimens.xml
@@ -8,6 +8,7 @@
     <dimen name="progressbar_margin_negative">8dp</dimen>
     <dimen name="dimen_none">0dp</dimen>
     <dimen name="image_button_min">32dp</dimen>
+    <dimen name="button_min">48dp</dimen>
 
     <dimen name="margin_xxl">64dp</dimen>
     <dimen name="margin_xl">32dp</dimen>
