--- a/music/src/main/res/menu/menu_main.xml
+++ b/music/src/main/res/menu/menu_main.xml
@@ -9,4 +9,11 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/action_search"
+        android:icon="@drawable/ic_search"
+        android:orderInCategory="101"
+        android:title="@string/action_search"
+        app:showAsAction="ifRoom" />
 </menu>
